--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </header>
     <main>
         <section id="our-story"></section>
-        <section id="watch"></section>
+        <section id="watch">
+            <div>
+               
+            </div>
+            <p> test</p>
+        </section>
         <section id="expertise"></section>
         <section id="team"></section>
         <section id="contact-client"></section>
