--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <section id="hero"></section>
     </header>
     <main>
-        <section id="our-story"></section>
+        <section id="our-story">
+            <h2>OUR STORY</h2>
+            <img src="images/design-assets/png/logo-big.png">
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus</p>
+            <br>
+            <p>accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+            <br>
+            <button id="blue-button">LEARN MORE</button>
+
+        </section>
         <section id="watch"></section>
         <section id="expertise"></section>
         <section id="team"></section>
