--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <header>
-        <nav>navigation</nav>
+        <nav>
+            <img id="logo" src="images/design-assets/png/logo.png" />
+            <ul class="horizontal-nav">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#expertise">EXPERTISE</a></li>
+                <li><a href="#team">TEAMS</a></li>
+                <li><a href="#">WORKS</a></li>
+                <li><a href="#">PEOPLE SAY</a></li>
+                <li><a href="#contact-client">CONTACT</a></li>
+              </ul>
+        </nav>
         <section id="hero"></section>
     </header>
     <main>
