--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="header">
             <img id="logo" src="images/design-assets/png/logo.png" />
             <ul class="horizontal-nav">
                 <li><a href="#">HOME</a></li>
