--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <nav class="header">
             <img id="logo" src="images/design-assets/png/logo.png" />
+            <div id="logo-text">tajam</div>
             <ul class="horizontal-nav">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -21,7 +22,17 @@
                 <li><a href="#contact-client">CONTACT</a></li>
               </ul>
         </nav>
-        <section id="hero"></section>
+        <section id="hero">
+            <div class="hero">
+                <h1>We Are Awesome Creative Agency</h1>
+                <hr>
+                <p>
+                    This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                    Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
+                    Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                </p>
+            </div>
+        </section>
     </header>
     <main>
         <section id="our-story"></section>
