--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
                     Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
                 </p>
+                <button class="blue-button">Button</button>
             </div>
         </section>
     </header>
