--- a/index.html
+++ b/index.html
@@ -65,7 +65,42 @@
         </section>
         <section id="expertise"></section>
         <section id="team"></section>
-        <section id="contact-client"></section>
+        <section id="contact-client" class="col-container">
+            <div class="leftcolumn">
+                <h2>GIVE US A GOOD NEWS</h2>
+                <div>
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Subject">
+                    <textarea placeholder="Your Message"></textarea>
+                    <input type="submit" name="SUBMIT" text="SUBMIT">
+                </div> 
+            </div>
+
+            <div class="rightcolumn">
+                <h2>OUR HAPPY CLIENT</h2>
+                <div class="col-container">
+                     <div class="inner-leftcolumn">
+                        <img src="images/design-assets/png/Zara_Logo.png" alt="">
+                        <img src="images/design-assets/png/1280px-Barneys_New_York_Logo.png" alt="">
+                        <img src="images/design-assets/png/Calvin_klein_logo.png" alt="">
+                        <img src="images/design-assets/png/Converse_logo.png" alt="">
+                        <img src="images/design-assets/png/1280px-Levi's_logo.png" alt="">
+                     </div>           
+                     <div class="inner-rightcolumn">
+                        <img src="images/design-assets/png/Logo_of_Mango_(new).png" alt="">
+                        <img src="images/design-assets/png/1280px-Gucci_Logo.png" alt="">
+                        <img src="images/design-assets/png/1280px-Logo_NIKE.png" alt="">
+                        <img src="images/design-assets/png/Puma_Logo.png" alt="">
+                        <img src="images/design-assets/png/Billabong.png" alt="">
+                     </div>   
+                </div>    
+
+
+
+            </div>
+
+        </section>
     </main>
     <footer>
 
