--- a/index.html
+++ b/index.html
@@ -63,7 +63,47 @@
               <h2>WATCH OUR STORY</h2>
             </div>
         </section>
-        <section id="expertise"></section>
+        <section id="expertise">
+            <h2>EXPERTISE</h2>
+            <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+            <hr class="hr-white">
+            <table>
+                <tr>
+                    <td>
+                        <img src="/images/design-assets/png/screen.png">
+                        <h3>WEB DESIGN & DEVELOPMENT</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                    <td>
+                        <img src="/images/design-assets/png/pen.png">
+                        <h3>BRANDING IDENTITY</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                    <td>
+                        <img src="/images/design-assets/png/mobile.png">
+                        <h3>MOBILE APP</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="/images/design-assets/png/graph.png">
+                        <h3>SEARCH ENGINE OPTIMIZATION</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                    <td>
+                        <img src="/images/design-assets/png/gameboy.png">
+                        <h3>GAME DEVELOPMENT</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                    <td>
+                        <img src="/images/design-assets/png/heart.png">
+                        <h3>MADE WITH LOVE</h3>
+                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </td>
+                </tr>
+            </table>
+        </section>
         <section id="team"></section>
         <section id="contact-client"></section>
     </main>
